[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/pricedown bl.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/square.png" type="Texture" id=3]
[ext_resource path="res://Assets/Elevator-music.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=4]
size = 125
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.113725, 0.415686, 0.25098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 186.0
margin_top = 4.0
margin_right = 838.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 652.0
margin_bottom = 350.0
rect_min_size = Vector2( 650, 350 )
custom_fonts/font = SubResource( 4 )
text = "NO MUERAS"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 652.0
margin_bottom = 420.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Jugar solo"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 424.0
margin_right = 652.0
margin_bottom = 490.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Mutiplayer"
flat = true

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 494.0
margin_right = 652.0
margin_bottom = 560.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "DIFICULTAD: FACIL"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
